chore(mb-scheduler): change CORS_ALLOWED_ORIGINS and CSRF_TRUSTED_ORIGINS

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,38 +4,38 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:9Lt+S0b9FYpAMj0Mc1Bwhse+cQQyUdnqh0MKfxHSbjFTClHjY492uj/2I9ib41wsok1q0YzhPqsNZaeVnlxTlN4VHhrbi4jxTBVS4plKWHZTNpGmXsn0SNHh1394xVlxtCa/Bl4VwVZNOkB2pd+Z3Q==,iv:N/bIutpu/BSXh93e/pZBM/NEH6O3WWvfsn3AD+sBOX8=,tag:VqQv6NnyYjk+DR4dXrrAsA==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:DsnGc/l8XEcL6pjUZoDVBcLxa8I=,iv:VLxCiaDmvtZ5gykNF86jKjtB7NvG5RY0hYQThhD5I34=,tag:KzhT3X8NcD8wlaMWqZTwVw==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:H4g+FP5Z0MCN3m7XvsKQbRnTUB8=,iv:DBG/6rVSWzQy+2rW3PntswoxDqhiMC4KjC5e6Z1bXB0=,tag:Ir0vgnOv3uFfkRPa0uhksw==,type:str]
-    SECRET_KEY: ENC[AES256_GCM,data:ku1s/tJix0RhYMWHdGfO+hbw7uUCZ9+dLEvmvTU5au41McggoWcKyuIX8QLpPCBFQYcs0wTrRIvzWx1DKODzLQ==,iv:A+mQ7MYKFAkh95QKbGaEIbw5GqthA+0IQK+YA5nDl3k=,tag:uM4OML3or+mSxb7u0rFhGA==,type:str]
-    ALLOWED_HOSTS: ENC[AES256_GCM,data:VA==,iv:tgLKPjx1bqZubjR2FFwTyGrSp5WvBRtBCamVoRojwKA=,tag:doCbxO4khp729z/+N2ra8w==,type:str]
-    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:CHIOFbKp7aLFr3SfOwt5MYGLPH9J,iv:5lFRmDDHFMZOi1patlT08/R4BKmtRhgFFotqs3Knxig=,tag:FJExlkzDFGp1SQNMhJKdVg==,type:str]
-    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:qQaLJUZ/q3bpZeg/76yoIg/KEo9O,iv:yLRaVI8ckw3GzAfZuMh7QZQYADJvuhPhzgMjYjx3TQk=,tag:y7weuoV0TGJkM+z+uLZovg==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:Qr+wN6bjpOW8Fi3xuG1pC325uG0H3IR3MVkQQ0Gdc8EFEcO8XviXmEEVb/w8S9/uY6vQC62JpA9q5osB84nM84FB8zbluw2LHs2FimcGSodaJjR+bcl48IgQ5DvEJmi5XAdlHe9El8TLW2md6UND9w==,iv:epRycViAKVtk2ZvwVkpGbyBLmtxljjPlhCpnIwQAqv0=,tag:vu+z5F4tQ9L56P2eiVUYsg==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:7IrDpkWfleMSIuBnLqtiSRJ7gbw=,iv:PPRX0bIppoMdyG1tderjoLwpwahsdp6Pcv64ZVHweEU=,tag:vzP/1L0ieIlpin+I9xNTDg==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:IjFIdcyqDSX5YHhhG5w7Osx/bLA=,iv:jV1y8nEqbU/jCz5HeTv0v7ssDwilDn7cM2CLkrFrEAE=,tag:4gY5WtmIIGgHVFraMf8N+A==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:oZgP4D3Gbnnusf72LvoGW6rPSel5Fz8P8X7rxn/ED3kdhVNol7AU5OZ61BTXDVuhR9knYIWijvup2fJSZfx8tw==,iv:/m5WaJY/PacQCH62PfM8Ev/V85g3pTr2c/z54vKhQoQ=,tag:XiPCBXYWgPAYtc/Ks30lBQ==,type:str]
+    ALLOWED_HOSTS: ENC[AES256_GCM,data:fw==,iv:4JfMn0dkzNT3URDDkLx9F93dE99lnfWImk+TS+1bY8c=,tag:VYSMhnHFhqT688+S28jOqw==,type:str]
+    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:UWPiyHNdJ2vCYobiM/vqkTUJ3G7xj1eGhNYsJBvkIPMRjC7tnQ2Nn1GlkmSJJNvSYPc9LR5cRRnW,iv:28/0KjhcpXUJJ/W7iT4hRYxsj8lTSR9wcz5NeJTr//M=,tag:vgZLKaB0VlHBSI+hhsHRLQ==,type:str]
+    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:B7V3RL9P6EbyOQjHdgL7IVuk19WYeyRh2sSk+jvi2NoiTkU=,iv:wHiLQnMG5J6h6s7K0HAFIOI3X4tS9OJlsT62TBpOEAk=,tag:a+p02uUFTC9msfTn7ciQwA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-22T12:23:15Z"
-    mac: ENC[AES256_GCM,data:T+0fvBJKndguuz6qwuRW/jGHHf9qNRxBApeGnvEF3hTbAUhl9NgzkTDMWz+Ufnpw0rga9W+pscQiInDRu86kvfZ27GzcIdnrnpH8FwzjMw4KuK4BTufCSyKEPtdKaQWDiqCBhhme4KYYjr3Urbz48a469+PVGP9Nzv/qb5kfYcI=,iv:M3gcgNbTmb/T8CCta1Z6LSpM4Xpsh9QFF0aCl82Tam4=,tag:xTCLSbT7dVP+eDoRliKJ4Q==,type:str]
+    lastmodified: "2023-09-23T20:02:18Z"
+    mac: ENC[AES256_GCM,data:i7Rtm8/zPZhh7XSF0ibYTa1sBDMNYSZDRA7BfnR0waHwg48TY6HwTKDVHZIWxJE2j/Jk0Jh/FxSl/5G16eq2ulZy0fp/eonKcJGClOgw7xwuNjVTTUnDLQaSrkIRc0ItaagKR1UQ8GoqPktudC6yFdS6l5NwyMwGxIXWKdqr1TA=,iv:wJpU12DAhh3ynE4UnUtonCNEwOFH8c8d0OLliMnc6gc=,tag:cuQV+cj0K0SGR7DuGejwuQ==,type:str]
     pgp:
-        - created_at: "2023-09-22T12:23:15Z"
+        - created_at: "2023-09-23T20:02:18Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/S8a3wfzX1w/fs9vdT0FHJ0QTtwhstATjbxTYtfaT8h4K
-            rNkJpbbMvsodMSgWCJ6TnFgaZ/2ea5kDJ1OXYlMW9Yurj6DSlxytJMrXlhvQt3Br
-            MEkeaXEF5U54yXtEUZ03Rk0PSJ2y6Sl2KTOsI+d4GWeOUqtg5wNZpClOFM3Hxx8V
-            NVvZN0PyVXfpBYg8pbLnYtroiW7f1o9s/HFq0T+xFu+3g5199y2YjMoxhjoFaB7n
-            ogVVwcGbPhTX7OuV4IKwARrrs6Kt8vCGSsxvIKqP8Vga5E7lA9bfeNM/ZAhehbtn
-            SvuXCR8tnqtvEkZHPrgBrBl8fr6IicXqY+bqsZXxVeTwD8wvfM8vCqTt0eFIKaUx
-            V7QjiZ9BdM4sMZ/vpFFEq+tOHNlr0Rs0bzFN3rjHFN9xP2T73PmYK3JmRmF2crrh
-            b1pfEeRm+QD17N0yz/IwnOtPG0r0x/X1O261lBiThghr4nJEmV60G2XxmYr63DOh
-            xd38ackXBeyyZVtPT0bj0l4BdQOaJNoCexjHeE0NGZLG9DJA8LN6El7UO+AI175X
-            unZCP/JcnAC2ybHhCqEWQz/J6KhAifsbGAbDi6SRRg3magJRa44s93wyXLXwh+Rg
-            7kAOvBDpmuBiDwZfDlrX
-            =KvH+
+            hQGMA71EESEn7N2iAQv9EUdNXqbiS7Y7CYeWEOpkVEYDt05hMyy3OwiW7jnKsQpn
+            pz6pz3IRexFE9gLlyd1bi4PgP9N1bJ0AXShdR97SK2zlaWppmznSPCQ3dM1Ck2MY
+            +/3/zpY9Zmnk1PI6x9/1EGyrqX6dbGv08ka61aYXq7jxX9Mt8lJPUhJTA6k+bLkQ
+            YbtFefxvunjnV3YEhuooeI4g04nJOm6MFxbrvi/F1f4uKaEYe17fe/H7A9Q6PU1x
+            eE7x4TC/82mqo7MPjoCczV52u/Y2FOtxZbkkGnkecwayE6zyP+1mWv4mIH3R4aa1
+            Laxv4S5iGoBE+t+vgfcaLRFDVw74+5WRJ2PgAFlW3zk4YxQuC3tmiryiHc1kSo/0
+            wIfhNw7boQJMPwgmDoHp1uukAi4T0kuB+4Zqt6QyegLnrv5PSB/S1eej8oejVLVA
+            kHU5lLrXDhYJxoZRhdWEI+WItNSzHXsGBRduj26281JU4gLjSoYPRTuk95+MJtLU
+            c6RhM5jhtu2DAwqdI7cy0l4BAQV1rH26f/CnBo1QEovOBG4SVBPKqAkOhVBDCz93
+            mUbxO+S9lz0F4p7H8R3CxietBQMPi/U0oYdXopdQc3k6Ir2aNKWF8UHYgdC2q5Dk
+            Usp3vIve6yHUpIH70Co/
+            =Wpei
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
