fix(mb-scheduler): fix incorrect CORS and CSRF env vars

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,38 +4,38 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:Qr+wN6bjpOW8Fi3xuG1pC325uG0H3IR3MVkQQ0Gdc8EFEcO8XviXmEEVb/w8S9/uY6vQC62JpA9q5osB84nM84FB8zbluw2LHs2FimcGSodaJjR+bcl48IgQ5DvEJmi5XAdlHe9El8TLW2md6UND9w==,iv:epRycViAKVtk2ZvwVkpGbyBLmtxljjPlhCpnIwQAqv0=,tag:vu+z5F4tQ9L56P2eiVUYsg==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:7IrDpkWfleMSIuBnLqtiSRJ7gbw=,iv:PPRX0bIppoMdyG1tderjoLwpwahsdp6Pcv64ZVHweEU=,tag:vzP/1L0ieIlpin+I9xNTDg==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:IjFIdcyqDSX5YHhhG5w7Osx/bLA=,iv:jV1y8nEqbU/jCz5HeTv0v7ssDwilDn7cM2CLkrFrEAE=,tag:4gY5WtmIIGgHVFraMf8N+A==,type:str]
-    SECRET_KEY: ENC[AES256_GCM,data:oZgP4D3Gbnnusf72LvoGW6rPSel5Fz8P8X7rxn/ED3kdhVNol7AU5OZ61BTXDVuhR9knYIWijvup2fJSZfx8tw==,iv:/m5WaJY/PacQCH62PfM8Ev/V85g3pTr2c/z54vKhQoQ=,tag:XiPCBXYWgPAYtc/Ks30lBQ==,type:str]
-    ALLOWED_HOSTS: ENC[AES256_GCM,data:fw==,iv:4JfMn0dkzNT3URDDkLx9F93dE99lnfWImk+TS+1bY8c=,tag:VYSMhnHFhqT688+S28jOqw==,type:str]
-    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:UWPiyHNdJ2vCYobiM/vqkTUJ3G7xj1eGhNYsJBvkIPMRjC7tnQ2Nn1GlkmSJJNvSYPc9LR5cRRnW,iv:28/0KjhcpXUJJ/W7iT4hRYxsj8lTSR9wcz5NeJTr//M=,tag:vgZLKaB0VlHBSI+hhsHRLQ==,type:str]
-    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:B7V3RL9P6EbyOQjHdgL7IVuk19WYeyRh2sSk+jvi2NoiTkU=,iv:wHiLQnMG5J6h6s7K0HAFIOI3X4tS9OJlsT62TBpOEAk=,tag:a+p02uUFTC9msfTn7ciQwA==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:VlCPxyzRjze7vrHKErnAmxx7z7DqICkp/zJyaguhOgeiKHBytO891h+tHrEecjRYktWDp3j6hsHVfqh4i4Oxm/u07yQjg5xgx+2JJc2YYP9/82MosTZ98253UQuZ+76iOHLRBZsPjlMwGW+1Wp/QKA==,iv:1XJf6LvZWUvD7UrftoTYOAYybY7+9ANJa/cKthmkR54=,tag:q9b5RXmZumSpUL4fnR6Nsg==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:CwNe1yudQ4vj077/YCHr29PhFi8=,iv:BH3vpXJuFYu3NCkYjthNOW6gQ5J55qetanNK029YvRQ=,tag:3LFd5Ra7ywhoV2p2+bLAFA==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:q/1BmGdKlSuDRrXFh09soO4WqzE=,iv:+BBpRcGRgiFRPr5tWC3tX2oEZ5E+/VU6rL4+/9eUgxI=,tag:uvKaAn97KLnsVomcWl/MZQ==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:z1UesDun48MUmu9cxjbW5s1Ppw5ru+c9uPriMmU+5V0RyCHlZLDOBsgulFVgrOpIVB1gkGviJOnwmQtPkE/D8w==,iv:HcS1gbRsxCAX03XsDp72QhjUx5e1a580NcPukrqj+wE=,tag:TyRvdFFfUoFiygTIz/44Jg==,type:str]
+    ALLOWED_HOSTS: ENC[AES256_GCM,data:vw==,iv:qHco7kOiJf/0d0kFGgivEiMDZ4Lt7yGWQ/ZzDou5j/s=,tag:QP1pT9hQkDUuoSOBWWqDdA==,type:str]
+    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:IHKYKxKox8gnhECLkHuepflCrsmFKuyY1kx62ObVd5zUcvfVk5pm5VOzyNVoiHaAgHZxfEpy3Ljt,iv:j6KTZ3EvUwFXKxUWXbvMzzW+GZEnaK0VcynNGJ5NyXQ=,tag:qBWtX9Uerqn9ywurIR+32g==,type:str]
+    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:SP9gD9sArhwzpKJLT/2DpXs7A8yC5zjRbeCocm1x37x1T/k=,iv:ITAkw/hMVDmkUgScn7ffzWW2MZ8O6+ala//NCxt3g9g=,tag:Bpm8BAS3QD19NrHyGTdl0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-23T20:02:18Z"
-    mac: ENC[AES256_GCM,data:i7Rtm8/zPZhh7XSF0ibYTa1sBDMNYSZDRA7BfnR0waHwg48TY6HwTKDVHZIWxJE2j/Jk0Jh/FxSl/5G16eq2ulZy0fp/eonKcJGClOgw7xwuNjVTTUnDLQaSrkIRc0ItaagKR1UQ8GoqPktudC6yFdS6l5NwyMwGxIXWKdqr1TA=,iv:wJpU12DAhh3ynE4UnUtonCNEwOFH8c8d0OLliMnc6gc=,tag:cuQV+cj0K0SGR7DuGejwuQ==,type:str]
+    lastmodified: "2023-09-23T20:56:39Z"
+    mac: ENC[AES256_GCM,data:aDT9iMPmTd0qxoVOGrrOm92N8z6EScWpJJkA8NCQzwgjIVlWGKiFuNPgWpWh13REm6XnyWY/wvsZka+86No+0NwacdmeqJG/BcU3jjKSIaN+EKzt6fK5UQuD6yHLq34A81VYb3jFuymWsp8f2P/8q2Bhifd3n5/yW9KOv8tMx+w=,iv:nHiY2jNQF86iZDw4j0HmQwhmNlOPhGuBfE8X/MRs9Tg=,tag:UgjsBLggE4ZTSAdh4pl72g==,type:str]
     pgp:
-        - created_at: "2023-09-23T20:02:18Z"
+        - created_at: "2023-09-23T20:56:39Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9EUdNXqbiS7Y7CYeWEOpkVEYDt05hMyy3OwiW7jnKsQpn
-            pz6pz3IRexFE9gLlyd1bi4PgP9N1bJ0AXShdR97SK2zlaWppmznSPCQ3dM1Ck2MY
-            +/3/zpY9Zmnk1PI6x9/1EGyrqX6dbGv08ka61aYXq7jxX9Mt8lJPUhJTA6k+bLkQ
-            YbtFefxvunjnV3YEhuooeI4g04nJOm6MFxbrvi/F1f4uKaEYe17fe/H7A9Q6PU1x
-            eE7x4TC/82mqo7MPjoCczV52u/Y2FOtxZbkkGnkecwayE6zyP+1mWv4mIH3R4aa1
-            Laxv4S5iGoBE+t+vgfcaLRFDVw74+5WRJ2PgAFlW3zk4YxQuC3tmiryiHc1kSo/0
-            wIfhNw7boQJMPwgmDoHp1uukAi4T0kuB+4Zqt6QyegLnrv5PSB/S1eej8oejVLVA
-            kHU5lLrXDhYJxoZRhdWEI+WItNSzHXsGBRduj26281JU4gLjSoYPRTuk95+MJtLU
-            c6RhM5jhtu2DAwqdI7cy0l4BAQV1rH26f/CnBo1QEovOBG4SVBPKqAkOhVBDCz93
-            mUbxO+S9lz0F4p7H8R3CxietBQMPi/U0oYdXopdQc3k6Ir2aNKWF8UHYgdC2q5Dk
-            Usp3vIve6yHUpIH70Co/
-            =Wpei
+            hQGMA71EESEn7N2iAQv/ZRErjPtte2BJ9Cr03YYdv6Vsq6ykKyY6SuH1CzS68m0Q
+            R11uG+CZfscJ8g7Ls4pcdsyzqWWE7aN6P46yyY2D0V6Cr++0CuX2sc+xZsU3E3PI
+            v6Ad0LCYcEsaMF5uIm93U92xOlO6JXMuDqrOjIW8b5MdBTGWJK1j0TzKNTOb/tXB
+            d7SzJ8bWrvh0Lgq6nVdh4odQ+IBo7UYQDmQg9CyIkfuPVck+sKPPJH62x9Q/dw0s
+            lMSYy8R26dWmnAo62Zu/QM+gRwmml80DQWBS3J5xQKpnXYHj9OvxhmQOA8noS7Jx
+            /CwUyZNu5GqLhV1NudpeWJcr2CoxkSyCweAjPoyIXZp6/LRSI7KyPEsp23sFngQF
+            JzpvW5wzHuqF1jvYLsh0cZ0hWAbePPkzrI4GOqorVeoXXfij7tg/Fd+H7LZGqh3Y
+            CajG+oLe1FJatka63x4VeQ5yfwAOk/IbLcC/q0P8nFckbgDPv7iN57bGz0l49THc
+            goVXqovPcy/cB3aClVRf0lwBsmGtYuBKa7XYP1K6stzI67/KAX4yvZU0j2N4UdZV
+            fsjCSG/8NwWpeUidZE6mGekJlJlha5DRhfBy1NepPoPe209PliKBOKYFN+D/CmPX
+            vYs5Xwd3KzwPRHrQFg==
+            =B+sx
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
