fix(mb-scheduler): adjusted CORS_ALLOWED_ORIGINS and CSRF_TRUSTED_ORIGINS

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,38 +4,38 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:VlCPxyzRjze7vrHKErnAmxx7z7DqICkp/zJyaguhOgeiKHBytO891h+tHrEecjRYktWDp3j6hsHVfqh4i4Oxm/u07yQjg5xgx+2JJc2YYP9/82MosTZ98253UQuZ+76iOHLRBZsPjlMwGW+1Wp/QKA==,iv:1XJf6LvZWUvD7UrftoTYOAYybY7+9ANJa/cKthmkR54=,tag:q9b5RXmZumSpUL4fnR6Nsg==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:CwNe1yudQ4vj077/YCHr29PhFi8=,iv:BH3vpXJuFYu3NCkYjthNOW6gQ5J55qetanNK029YvRQ=,tag:3LFd5Ra7ywhoV2p2+bLAFA==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:q/1BmGdKlSuDRrXFh09soO4WqzE=,iv:+BBpRcGRgiFRPr5tWC3tX2oEZ5E+/VU6rL4+/9eUgxI=,tag:uvKaAn97KLnsVomcWl/MZQ==,type:str]
-    SECRET_KEY: ENC[AES256_GCM,data:z1UesDun48MUmu9cxjbW5s1Ppw5ru+c9uPriMmU+5V0RyCHlZLDOBsgulFVgrOpIVB1gkGviJOnwmQtPkE/D8w==,iv:HcS1gbRsxCAX03XsDp72QhjUx5e1a580NcPukrqj+wE=,tag:TyRvdFFfUoFiygTIz/44Jg==,type:str]
-    ALLOWED_HOSTS: ENC[AES256_GCM,data:vw==,iv:qHco7kOiJf/0d0kFGgivEiMDZ4Lt7yGWQ/ZzDou5j/s=,tag:QP1pT9hQkDUuoSOBWWqDdA==,type:str]
-    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:IHKYKxKox8gnhECLkHuepflCrsmFKuyY1kx62ObVd5zUcvfVk5pm5VOzyNVoiHaAgHZxfEpy3Ljt,iv:j6KTZ3EvUwFXKxUWXbvMzzW+GZEnaK0VcynNGJ5NyXQ=,tag:qBWtX9Uerqn9ywurIR+32g==,type:str]
-    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:SP9gD9sArhwzpKJLT/2DpXs7A8yC5zjRbeCocm1x37x1T/k=,iv:ITAkw/hMVDmkUgScn7ffzWW2MZ8O6+ala//NCxt3g9g=,tag:Bpm8BAS3QD19NrHyGTdl0w==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:U+CeK1y2JFGm0S+z5Uv99kYePJGV8Pkq6Xo6nq0f9YVupakhX4VvO4sp9gjeSgRypt5doZVz+hxIKdoBZP1TdHMjpFbVKcVlxYxvP2LPxYaY1tjyb9JWOEXSvZa4whp/9vRoXTYRyLfA0IHMSxpZ4w==,iv:H2CZKCOWcgP+3ltyPFvHirXU1TU3BG7EwA94EY9aYf0=,tag:rI7yMU+oRfnIYs7NbclKTQ==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:dj0AuI9FNbH9j68UzMLOsHoeVRI=,iv:Yx0OV6BGHsedZPOOK46CXz4dmsgSwLJ7iI6bFqcVhf8=,tag:hsOOJe5RN9FF5s4J7csrmA==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:cqXSPV9ai5EWlAanYAM+kiFJSFc=,iv:NYL/F33Q4MxAC+YFwC4S2UNkeIlTnQGoWJT5H6MHbUw=,tag:imlW1sAk/ti5eSHVz8XzrA==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:SAOYtjnqEldQRcX5G8tHcwhZIAZ3B2++CGhjgwVV32HpaMckkNwQ2PIvX68RQEq4SWqsTab6W6K1LiOJEUkZ6g==,iv:g9YZoWmgtfMl0mNz63j4DuDwLohItGkn0EzuCnCCiQw=,tag:HJbZRC8uS92x8hNpMbJBdg==,type:str]
+    ALLOWED_HOSTS: ENC[AES256_GCM,data:aQ==,iv:mV+a7TsGffUQHij1n4YwtgZOlF/BHGmRYTCP6X4c17s=,tag:r/+Aw57XMAEZE9l5EYbqXg==,type:str]
+    CORS_ALLOWED_ORIGINS: ENC[AES256_GCM,data:EWoMM8hbEZmXsqpyB//8Zr0BAC6PO+25z3xbcgPpUMgejWlkZWNxKGA0HAzYDnklU5ZSZBzy6xK6,iv:G2XIWDYSaqb4Nic97g5co88okJu7ksrgIUD/kEmgnKk=,tag:O+8+dOFhbLDgwwQaQx0qog==,type:str]
+    CSRF_TRUSTED_ORIGINS: ENC[AES256_GCM,data:uB4jGgJ9cPb2lWOmOl4HailBCtiyRzdaq0fJr1CwIDQkX9M=,iv:FpCLKWk2KsxFKSgqbvGANq+hCgmed4eIo3aIL7pUr+I=,tag:tIhm9zwL9x6WaPIwlWCGMw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-23T20:56:39Z"
-    mac: ENC[AES256_GCM,data:aDT9iMPmTd0qxoVOGrrOm92N8z6EScWpJJkA8NCQzwgjIVlWGKiFuNPgWpWh13REm6XnyWY/wvsZka+86No+0NwacdmeqJG/BcU3jjKSIaN+EKzt6fK5UQuD6yHLq34A81VYb3jFuymWsp8f2P/8q2Bhifd3n5/yW9KOv8tMx+w=,iv:nHiY2jNQF86iZDw4j0HmQwhmNlOPhGuBfE8X/MRs9Tg=,tag:UgjsBLggE4ZTSAdh4pl72g==,type:str]
+    lastmodified: "2023-09-27T22:07:41Z"
+    mac: ENC[AES256_GCM,data:kZnVJYo2EooEN+MYS9SILizAVRo+m71OWb4nPW5GYp3hHJt01RAPzdYqNh0zL2o3gUi2frBYP2sn88SDMWNW9SzkAEmFjlmUj0jcGrjiAgtW5i6ThEAG1AGY9zAN+roLZ2aBMBzeawbnH6R0TvW4IC/GnOtw4aztKbT1nQa++18=,iv:Lyb9AZICklV7Y5Jn+/ty3wU7JtjeqtWhOhzJxseC5bo=,tag:sAdWWVIUG39PAPfTnJnW0w==,type:str]
     pgp:
-        - created_at: "2023-09-23T20:56:39Z"
+        - created_at: "2023-09-27T22:07:41Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/ZRErjPtte2BJ9Cr03YYdv6Vsq6ykKyY6SuH1CzS68m0Q
-            R11uG+CZfscJ8g7Ls4pcdsyzqWWE7aN6P46yyY2D0V6Cr++0CuX2sc+xZsU3E3PI
-            v6Ad0LCYcEsaMF5uIm93U92xOlO6JXMuDqrOjIW8b5MdBTGWJK1j0TzKNTOb/tXB
-            d7SzJ8bWrvh0Lgq6nVdh4odQ+IBo7UYQDmQg9CyIkfuPVck+sKPPJH62x9Q/dw0s
-            lMSYy8R26dWmnAo62Zu/QM+gRwmml80DQWBS3J5xQKpnXYHj9OvxhmQOA8noS7Jx
-            /CwUyZNu5GqLhV1NudpeWJcr2CoxkSyCweAjPoyIXZp6/LRSI7KyPEsp23sFngQF
-            JzpvW5wzHuqF1jvYLsh0cZ0hWAbePPkzrI4GOqorVeoXXfij7tg/Fd+H7LZGqh3Y
-            CajG+oLe1FJatka63x4VeQ5yfwAOk/IbLcC/q0P8nFckbgDPv7iN57bGz0l49THc
-            goVXqovPcy/cB3aClVRf0lwBsmGtYuBKa7XYP1K6stzI67/KAX4yvZU0j2N4UdZV
-            fsjCSG/8NwWpeUidZE6mGekJlJlha5DRhfBy1NepPoPe209PliKBOKYFN+D/CmPX
-            vYs5Xwd3KzwPRHrQFg==
-            =B+sx
+            hQGMA71EESEn7N2iAQwAo1EmqgQIYOoKEvgQPGfVXSdtJzp/qPyVLH3r1buSQwPO
+            gdC7JH+CQW551rmTieIDjbBPTgHB1A1DXZDVnXLN9f2uTkSOQnAewl4etMUGh2OW
+            9YiYZcg90awojr9j9ix4Zmyp1w+XsSLxbFNQEEGAgzLJyq4gSQ1FCs6T8gnVLI1G
+            Lt2gPNCU/mM5pDKfFrrpooFlIiXJgluqGdpF9I5p9oGlf4QT1D3mbN6bgxZ+8yzX
+            5eaBYTORKp4YznAy31NYiSBu9wTqcVR9seyDhAz6Jk7NwqAZaRdvX577i9oamwRN
+            2BX4bv9sUdavZ/PVx6fcgqNVKmUgHElN5nGENfYrvPnWK40rE1BG804M+e1mPAOA
+            y7kJIYpl3Y4GkzV/s2qL3O6LIe6qSrGZf3DiyWR+YYpviQrJqQKEdaANXh+v6xRo
+            Nrd5JKXJ+0gbqXxbd8Y6O778qIWIoiNYoqTlv6ONjGf0Bq9VBR/F6Ej5IzEqJP+u
+            XfnUvHiA8Pgtb5kfPPd+0l4BYzBhP+B4sYMvGyp9vlstScCP/ZELqKdN1Q8dh/+/
+            UOrLN+iCODcL/K19KuIBR63N+nWIDT8g7pil6CTz/U5n5G6NSGcFFqgYkDsYwWkJ
+            v9C692PaExsp+lpkkRGh
+            =peZN
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
